src/objects/Zip_Demographic__c.object
<CustomObject>
    <description>Holds all of the postal code demographics data</description>
    <fields>
        <fullName>Aggregate_HH_Effective_Buying_Income__c</fullName>
        <description>Current Year Aggregate Household Effective Buying Income</description>
        <label>Aggregate_HH_Effective_Buying_Income</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AliasIntroDate__c</fullName>
        <label>AliasIntroDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AreaCode__c</fullName>
        <label>AreaCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AsianPopulation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AsianPopulation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AverageHouseValue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AverageHouseValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_AveragHH_Effective_Buying_Income__c</fullName>
        <description>The average effective buying income in each zip code</description>
        <label>Average_HH_Effective_Buying_Income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_HH_Effective_Buying_Income__c</fullName>
        <description>Current Year Average Household Effective Buying Income</description>
        <label>Average_HH_Effective_Buying_Income</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BlackPopulation__c</fullName>
        <label>BlackPopulation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BoxCount__c</fullName>
        <label>BoxCount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessAnnualPayroll__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BusinessAnnualPayroll</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessEmploymentFlag__c</fullName>
        <label>BusinessEmploymentFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessFirstQuarterPayroll__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BusinessFirstQuarterPayroll</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBSADivPop2003__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Core Based Statistical Area Pop 2003</description>
        <label>CBSADivPop2003</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBSADivisionPopulation__c</fullName>
        <label>CBSA Division Population</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBSAPop2003__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Core Based Statistical Area Pop 2003</description>
        <label>CBSAPop2003</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBSAPopulation__c</fullName>
        <label>CBSA Population</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBSA_Div_Name__c</fullName>
        <label>CBSA_Div_Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA_Div__c</fullName>
        <description>Core Based Statistical Area Division</description>
        <label>CBSA_Div</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA_Name__c</fullName>
        <description>Core Based Statistical Area Name</description>
        <label>CBSA_Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA_Type__c</fullName>
        <description>Core Based Statistical Area type</description>
        <label>CBSA_Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA__c</fullName>
        <description>Core Based Statistical Area</description>
        <label>CBSA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAName__c</fullName>
        <description>Core Statistical Area Name</description>
        <label>CSAName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSA__c</fullName>
        <description>Combined Statistical Area</description>
        <label>CSA</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarrierRouteRateSortation__c</fullName>
        <label>CarrierRouteRateSortation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityAliasAbbreviation__c</fullName>
        <label>CityAliasAbbreviation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityAliasCode__c</fullName>
        <label>CityAliasCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityAliasMixedCase__c</fullName>
        <label>CityAliasMixedCase</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityAliasName__c</fullName>
        <label>CityAliasName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityDeliveryIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CityDeliveryIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CityMixedCase__c</fullName>
        <label>CityMixedCase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityStateKey__c</fullName>
        <label>CityStateKey</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityType__c</fullName>
        <label>CityType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassificationCode__c</fullName>
        <label>ClassificationCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongressionalDistrict__c</fullName>
        <label>CongressionalDistrict</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongressionalLandArea__c</fullName>
        <label>CongressionalLandArea</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountyANSI__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CountyANSI</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountyFIPS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CountyFIPS</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DayLightSaving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DayLightSaving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeliveryBusiness__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DeliveryBusiness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryResidential__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DeliveryResidential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DeliveryTotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_to_Center_2012__c</fullName>
        <label>Distance to Center 2012</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_to_Center_2013__c</fullName>
        <label>Distance to Center 2013</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_to_Center_2014__c</fullName>
        <label>Distance to Center 2014</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_to_Recommended_Center__c</fullName>
        <label>Distance_to_Recommended_Center</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drivetime_IM_number_of_centers__c</fullName>
        <description>Based on Driving Time, this is the number of centers in 50 miles driving time radius.</description>
        <label>Drivetime IM number of centers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Driving_distance_to_center__c</fullName>
        <description>This is the driving distance to the nearest center, as calculated from the zip code using TomTom Navigation data.</description>
        <label>Driving distance to center</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Driving_minutes_to_center__c</fullName>
        <description>This is the estimated driving minutes to the nearest center as calculated by TomTom Navigation data. Data is shown in &quot;peak&quot; time.</description>
        <label>Driving minutes to center</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDU_Associates_Degree__c</fullName>
        <description>Number of adults 25+ that have completed at least an associates degree</description>
        <label>EDU_Associates_Degree</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDU_Bachelors_Degree__c</fullName>
        <description>Number of adults 25+ who have at least a Bachelors degree</description>
        <label>EDU_Bachelors_Degree</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDU_Doctorate_Degree__c</fullName>
        <description>The number of adults 25+ that have a Doctorate degree</description>
        <label>EDU_Doctorate_Degree</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDU_High_School_Graduate__c</fullName>
        <description>The number of adults 25+ that have completed at least a high school degree or GED</description>
        <label>EDU_High_School_Graduate</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDU_Less_than_9th_Grade__c</fullName>
        <description>Number of adults 25+ that have completed less than a 9th grade education level</description>
        <label>EDU_Less_than_9th_Grade</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDU_Masters_Degree__c</fullName>
        <description>Number of adults 25+ that have completed a masters degree</description>
        <label>EDU_Masters_Degree</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDU_Professional_Degree__c</fullName>
        <description>Adults 25+ who have completed a Professional Degree (PhD)</description>
        <label>EDU_Professional_Degree</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDU_Some_College_No_Degree__c</fullName>
        <description>Number of adults 25+ that have completed at least some college but no degree</description>
        <label>EDU_Some_College_No_Degree</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDU_Some_High_School_No_Diploma__c</fullName>
        <description>The number of adults 25+ that have completed some high school, but no diploma or GED</description>
        <label>EDU_Some_High_School_No_Diploma</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elevation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Elevation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FacilityCode__c</fullName>
        <label>FacilityCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FemalePopulation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FemalePopulation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinanceNumber__c</fullName>
        <label>FinanceNumber</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrowthHousingUnits2009__c</fullName>
        <defaultValue>0</defaultValue>
        <label>GrowthHousingUnits2009</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrowthHousingUnits2010__c</fullName>
        <defaultValue>0</defaultValue>
        <label>GrowthHousingUnits2010</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrowthIncreaseNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>GrowthIncreaseNumber</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrowthIncreasePercentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>GrowthIncreasePercentage</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrowthRank__c</fullName>
        <defaultValue>0</defaultValue>
        <label>GrowthRank</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_4555_100K125K__c</fullName>
        <description>Household Income $100,000 - $124,999
Current Year Households, Householder Age 45 - 54,</description>
        <label>HH_4555_100K125K</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_4555_125K150K__c</fullName>
        <description>Household Income $125,000 - $149,999
Current Year Households, Householder Age 45 - 54</description>
        <label>HH_4555_125K150K</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_4555_150K200K__c</fullName>
        <description>Household Income $150,000 - $199,999
Current Year Households, Householder Age 45 - 54</description>
        <label>HH_4555_150K200K</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_4555_200KPlus__c</fullName>
        <description>Current Year Households, Householder Age 45 - 54,
Household Income $200,000+</description>
        <label>HH_4555_200KPlus</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_5564_200KPlus__c</fullName>
        <description>Current Year Households, Householder Age 55 - 64,
Household Income $200,000+</description>
        <label>HH_5564_200KPlus</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_6574_200KPlus__c</fullName>
        <description>Current Year Households, Householder Age 65 - 74,
Household Income $200,000+</description>
        <label>HH_6574_200KPlus</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_85Plus_0K15K__c</fullName>
        <description>Current Year Households, Householder Age 85+,
Household Income &lt; $15,000</description>
        <label>HH_85Plus_0K15K</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_85Plus_100K125K__c</fullName>
        <description>Current Year Households, Householder Age 85+,
Household Income $100,000 - $124,999</description>
        <label>HH_85Plus_100K125K</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_85Plus_125K150K__c</fullName>
        <description>Current Year Households, Householder Age 85+,
Household Income $125,000 - $149,999</description>
        <label>HH_85Plus_125K150K</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_85Plus_200KPlus__c</fullName>
        <description>Current Year Households, Householder Age 85+,
Household Income $200,000+</description>
        <label>HH_85Plus_200KPlus</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_EBI_0K15K__c</fullName>
        <description>Current Year Households, Effective Buying Income &lt;$15,000</description>
        <label>HH_EBI_0K15K</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_EBI_100K125K__c</fullName>
        <description>Current Year Households, Effective Buying Income
$100,000 - $124,999</description>
        <label>HH_EBI_100K125K</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_EBI_125K150K__c</fullName>
        <description>Current Year Households, Effective Buying Income
$150,000 - $199,999</description>
        <label>HH_EBI_125K150K</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_EBI_500KPlus__c</fullName>
        <description>Current Year Households, Effective Buying Income
$500,000+</description>
        <label>HH_EBI_500KPlus</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH__c</fullName>
        <description>Current Year Households, Householder Age 45 - 54,
Household Income &lt; $15,000</description>
        <label>HH_4555_0K15K</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HawaiianPopulation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HawaiianPopulation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HispanicPopulation__c</fullName>
        <label>HispanicPopulation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HouseholdsPerZipCode__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HouseholdsPerZipCode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_Buying_Index__c</fullName>
        <description>Shows the index the buying power index, calculated for IM zip codes (50 mi =&lt;) for each center</description>
        <label>IM_Buying_Index</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InMarket_ByDrivingDistance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checking on if the Zip Code in/out of market based on Driving Distance in 50 Miles.</description>
        <label>InMarket ByDrivingDistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_50m_Index__c</fullName>
        <description>This is a zip code rating within 50 miles of an existing center. 
Scale: 1 (very poor) to 10 (excellent)</description>
        <label>In 50m Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_DMA_Index__c</fullName>
        <description>This is a zip code scoring method based on the best information available on 11/25/15
Scale from 1 (poor) to 10 (excellent)</description>
        <label>In_DMA_Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncomePerHousehold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IncomePerHousehold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IndianPopulation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IndianPopulation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LandArea__c</fullName>
        <label>LandArea</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leads_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Just using this to track if the leads associated with this zip have been updated</description>
        <label>Leads Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Trade_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the trade area assigned in contracts to the center.</description>
        <label>Legal Trade Area</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Zip Demographics (Legal Trade Area)</relationshipLabel>
        <relationshipName>Zip_Demographics8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MFDU__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MFDU</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSA_Name__c</fullName>
        <description>Metro Statistical Area Name</description>
        <label>MSA_Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <description>Metropolitan Statistical Area</description>
        <label>MSA</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingName__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MailingName</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MalePopulation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MalePopulation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedianAgeFemale__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MedianAgeFemale</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedianAgeMale__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MedianAgeMale</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedianAge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MedianAge</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedianHHIncome_4555__c</fullName>
        <description>Current Year Median Household Income, Householder
Age 45 - 54</description>
        <label>MedianHHIncome_4555</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedianHHIncome_5564__c</fullName>
        <description>Current Year Median Household Income, Householder
Age 55 - 64</description>
        <label>MedianHHIncome_5564</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedianHHIncome_6574__c</fullName>
        <description>Current Year Median Household Income, Householder
Age 65 - 74</description>
        <label>MedianHHIncome_6574</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedianHHIncome_85Plus__c</fullName>
        <description>Current Year Median Household Income, Householder
Age 85+</description>
        <label>MedianHHIncome_85Plus</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Median_HH_Effective_Buying_Income__c</fullName>
        <description>The median of effective buying power in each zip code</description>
        <label>Median_HH_Effective_Buying_Income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MultiCounty__c</fullName>
        <label>MultiCounty</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nearest_Center_2012__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nearest Center 2012</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Zip Demographics</relationshipLabel>
        <relationshipName>Zip_Demographics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nearest_Center_2013__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nearest Center 2013</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Zip Demographics (Nearest Center 2013)</relationshipLabel>
        <relationshipName>Zip_Demographics1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nearest_Center_2014__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nearest Center 2014</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Zip Demographics (Nearest Center 2014)</relationshipLabel>
        <relationshipName>NearestCenter2014</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nearest_Network__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the id of the nearest network center</description>
        <label>Nearest Network</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Zip Demographics (Nearest Network)</relationshipLabel>
        <relationshipName>Zip_Demographics2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nearest_center_drive_time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the nearest center as calculated using drive time minutes.</description>
        <label>Nearest center drive time</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Zip Demographics (Nearest center drive time)</relationshipLabel>
        <relationshipName>Zip_Demographics6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberOfBusinesses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NumberOfBusinesses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofEmployees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NumberofEmployees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherPopulation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OtherPopulation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMSA_Name__c</fullName>
        <description>Primary Metro Statistical Area Name</description>
        <label>PMSA_Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSA__c</fullName>
        <description>Primary Metroploitan Statistical Area</description>
        <label>PMSA</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonsPerHousehold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PersonsPerHousehold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PopulationEstimate__c</fullName>
        <label>PopulationEstimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreferredLastLineKey__c</fullName>
        <label>PreferredLastLineKey</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_DMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary_DMA</label>
        <referenceTo>DMA__c</referenceTo>
        <relationshipLabel>Zip Demographics</relationshipLabel>
        <relationshipName>Zip_Demographics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_Center_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to indicate whether the Recommended Center has been changed from the Nearest Center purposefully.</description>
        <label>Recommended Center Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended Center</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Zip Demographics (Recommended Center)</relationshipLabel>
        <relationshipName>Zip_Demographics5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDU__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SFDU</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StateANSI__c</fullName>
        <defaultValue>0</defaultValue>
        <label>StateANSI</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StateFIPS__c</fullName>
        <label>StateFIPS</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StateFullName__c</fullName>
        <label>StateFullName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_DMA__c</fullName>
        <label>Teriary_DMA</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>TimeZone</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>